RESULTS/AutoSpec/raw_results/out-4o-NLA_lipus/18_0004/18_merged.txt
/home/yangfp/AutoSpec/AutoSpec1/out/18_0004/18_merged.c:15:118: error: unterminated comment
   15 |     loop invariant x == \sum(0, c-1, \lambda integer i; (i+1)*(i+1)*(i+1)*(i+1)) /* Summation of i-th power 4 */;
      |                                                                                                                      ^
